reuploading from second project

--- a/anniversary-website/package.json
+++ b/anniversary-website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anni-gift",
+  "name": "anniversary-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,15 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^10.5.0",
-    "@react-three/fiber": "^9.2.0",
-    "autoprefixer": "^10.4.21",
-    "framer-motion": "^12.23.3",
-    "postcss": "^8.5.6",
+    "framer-motion": "^12.23.6",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.11",
-    "three": "^0.178.0"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
